Add Tic Tac Toe Game

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,3 +44,10 @@ a {
 #online-title {
   font-size: 16px;
 }
+
+iframe {
+  width: 50%;
+  height: 60vh;
+  display: block;
+  margin: 15px auto;
+}
